# Solana-Accelerate

./: README.md
project-1-crud-app/my-journal-dapp/: package-lock.json
project-1-crud-app/my-journal-dapp/anchor/: Anchor.toml
project-1-crud-app/my-journal-dapp/anchor/programs/counter/: Cargo.toml
project-1-crud-app/my-journal-dapp/anchor/programs/counter/src/: lib.rs
project-2-anchor-client/: Cargo.toml  README.md
project-2-anchor-client/src/: main.rs
project-3-pdas/: Anchor.toml
project-3-pdas/programs/project-3-pdas/: Cargo.toml
project-3-pdas/programs/project-3-pdas/src/: lib.rs
project-3-pdas/tests/: project-3-pdas.ts
project-4-cpis/: Anchor.toml
project-4-cpis/programs/project-4-cpis/: Cargo.toml
project-4-cpis/programs/project-4-cpis/src/: lib.rs
project-4-cpis/tests/: Cargo.toml  README.md
project-4-cpis/tests/src/: lib.rs  test_e2e.rs  test_initialize.rs
project-5-capstone/: Anchor.toml
project-5-capstone/programs/project-5-capstone/: Cargo.toml  README.md
project-5-capstone/programs/project-5-capstone/src/: lib.rs
project-5-capstone/tests/: Cargo.toml
project-5-capstone/tests/src/: e2e_test.rs  lib.rs  test_initialize.rs
