[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-client = "0.31.1"
anchor-lang = "0.31.1"
borsh = "1.5.7"
project-5-capstone = { version = "0.1.0", path = "../programs/project-5-capstone" }
solana-sdk = "2.2.2"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
